Started writing the editor.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset=utf-8>
     <link rel=stylesheet href="styles.css">
     <title>Pioneer</title>
 </head>
 <body>
     <canvas id=bg></canvas>
+    <div id=editor></div>
+    <script src=jquery.js></script>
     <script src=atlas.js></script>
 </body>
 </html>
