Started to make the World tab.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel=stylesheet href="styles.css">
     <title>Pioneer</title>
 </head>
-<body>
-    <script src=atlas.js></script>
-</body>
+<body></body>
+<script src=atlas.js></script>
 </html>
