Made index.html more compliant.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@
     <link rel=stylesheet href="styles.css">
     <title>Pioneer</title>
 </head>
-<body></body>
-<script src=atlas.js></script>
+<body><script src=atlas.js></script></body>
 </html>
