Added an actor tab with a code editor.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset=utf-8>
+    <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <link rel=stylesheet href="styles.css">
     <title>Pioneer</title>
 </head>
-<body><script src=atlas.js></script></body>
+<body><script src=atlas.js></script><script src=actor.js></script><script src="codemirror/lib/codemirror.js"></script><script src="codemirror/mode/javascript/javascript.js"></script></body>
 </html>
