--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
     <link rel=stylesheet href="styles.css">
     <title>Pioneer</title>
 </head>
+<!--
+    Pioneer (currently just a map editor)
+    Copyright (C) 2012  Nathan Rugg
+    
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-->
 <body><script src=atlas.js></script><script src=actor.js></script><script src="codemirror/lib/codemirror.js"></script><script src="codemirror/mode/javascript/javascript.js"></script></body>
 </html>
